# codetinkering

./: .gitignore
c/: bytelandian.c  libtree.c  linkedlist.c  linkedlistlib.c  list.h  node.h  occurence.c  occurence1.c  qOnLL.c  reverseLL.c  splnlist.c  stackOnLL.c  sturec.c
crackcode/: addlist.py  anagrams.c  corruptlist.py  listnstack.py  nthtolast.py  qusingstack.py  remduplist.py  removedup.c  replace.c  replace.py  reverse.c  rotate.py  setofstack.py  sorttest.c  sortusingstack.py  stackwithmin.c  threestack  threestack.c  towerofhanoi.py  unique.c  voidtest.c  zerorowcol.py
dsnalgo/: AVLTree.py  BinarySearchTree.py  HttpTest.java  MergeSort.java  MyHeap.py  PostOrderFromInorderPreOrder.java  SegmentTree.py  Tree.java  TreeNode.java  TreeNode.py  TreeTraversal.java  fib.py  firstnonrepeatcharinstring.py  genPermutation.py  lcs.py  lengthoflongestpalindrome.py  output  removeloop.py  rodcut.py  segregatevenoddnode.py  sort_pile_of_cards.py  subarray_with_givensum.py  youngtableau.py
leetcode/: JokeTest.java  L35_search_insert_pos.py  LC100_same_tree.py  LC101_symmetric_tree.py  LC104_find_maxdepth_bintree.py  (+107 more)
rust/quickfix-test/: Cargo.toml
rust/quickfix-test/src/: codegen.rs  field.rs  fields.rs  fxerror.rs  main.rs  newfield.rs  serial.rs  types.rs
rust/quickfix-test/src/fix43/: fields.rs
rust/quickfix-test/src/fix44/: FIX44.xml
rust/xml-parsing/: Cargo.toml  fix.json  rustfmt.toml
rust/xml-parsing/config/fix43/: FIX43.xml
rust/xml-parsing/src/: data_dictionary.rs  fix.rs  fix_xml.rs  main.rs  message.rs  quickfix_errors.rs  strongxmltest.rs
(+250 files in other folders)
