[package]
name = "xml-parsing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.22", features = [ "serialize" ] }
strong-xml = "0.6.3"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
xml-rs = "0.8.4"
serde = { version = "1.0", features = [ "derive" ] }